修复Runtime exec的错误